--- a/FrontEnd/ValedictorianFE/package.json
+++ b/FrontEnd/ValedictorianFE/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "campuslearn",
+  "name": "valedictorian",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
@@ -11,5 +12,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^38.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.11.0"
   }
 }
