Reworked endpoints and APIs
Greatly reworked backend endpoints as well as the connection to the DB and the frontend

--- a/ValedictorianAPI/appsettings.json
+++ b/ValedictorianAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CampusLearnDB": "Server=LIAM_PC\\MSSQLSERVER;Database=CampusLearnDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ValedictorianDB": "Server=DESKTOP-6MBD24J\\SQLEXPRESS02;Database=ValedictorianDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
