load tutor sessions from backend on page load and refresh
Fixed calendar

--- a/ValedictorianAPI/appsettings.json
+++ b/ValedictorianAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ValedictorianDB": "Server=DESKTOP-6MBD24J\\SQLEXPRESS02;Database=ValedictorianDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ValedictorianDB": "Server=LIAM_PC;Database=ValedictorianDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
